Ajout du type de mutation "Changement de canton" dans les sorties sql